--- a/src/DapperAOT/DapperAOT.csproj
+++ b/src/DapperAOT/DapperAOT.csproj
@@ -16,4 +16,8 @@
 
 		<None Include="$(OutputPath)/$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Dapper.Core\Dapper.Core.csproj" />
+	</ItemGroup>
 </Project>
