--- a/test/DapperAOT.Test/DapperAOT.Test.csproj
+++ b/test/DapperAOT.Test/DapperAOT.Test.csproj
@@ -1,13 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<NoWarn>$(NoWarn);IDE0042</NoWarn>
+		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+		<NoWarn>$(NoWarn);IDE0042;CS8002</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.78" />
 		<PackageReference Include="Microsoft.Build" Version="16.8.0" />
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.8.0" />
 		<PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+		<PackageReference Include="System.Data.Common" Version="4.3.0" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
 			<PrivateAssets>all</PrivateAssets>
