--- a/test/DapperAOT.Test/DapperAOT.Test.csproj
+++ b/test/DapperAOT.Test/DapperAOT.Test.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="Dapper" Version="2.0.78" />
 		<PackageReference Include="Microsoft.Build" Version="16.8.0" />
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.8.0" />
+		<PackageReference Include="Oracle.ManagedDataAccess" Version="4.121.2" />
 		<PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
 		<PackageReference Include="System.Data.Common" Version="4.3.0" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
