--- a/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
+++ b/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
@@ -8,7 +8,7 @@
 		<PackageReference Include="Dapper" Version="2.0.78" />
 		<PackageReference Include="Microsoft.Build" Version="16.8.0" />
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.8.0" />
-		<PackageReference Include="Oracle.ManagedDataAccess" Version="4.121.2" />
+		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.1" />
 		<PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
 		<PackageReference Include="System.Data.Common" Version="4.3.0" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
@@ -20,6 +20,6 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.8.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
 		<ProjectReference Include="..\..\src\Dapper.Core\Dapper.Core.csproj" />
-		<ProjectReference Include="..\..\src\DapperAOT\DapperAOT.csproj" />
+		<ProjectReference Include="..\..\src\Dapper.AOT\Dapper.AOT.csproj" />
 	</ItemGroup>
 </Project>
