--- a/src/Dapper.AOT/Dapper.AOT.csproj
+++ b/src/Dapper.AOT/Dapper.AOT.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>netstandard2.0</TargetFramework>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<NoPackageAnalysis>true</NoPackageAnalysis>
 		<DevelopmentDependency>true</DevelopmentDependency>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<AllowUnsafeBlocks Condition="'$(TargetFramework)'=='netstandard2.0'">true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -16,6 +17,6 @@
 		<None Include="$(OutputPath)/$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 
 		<!-- kinda hoping we can make this add a project reference to the consumer, but: we'll see (the lib itself doesn't need it) -->
-		<ProjectReference Include="..\Dapper.Core\Dapper.Core.csproj" />
+		<!--<ProjectReference Include="..\Dapper.Core\Dapper.Core.csproj" />-->
 	</ItemGroup>
 </Project>
