put usage project together

--- a/src/Dapper.Core/Dapper.Core.csproj
+++ b/src/Dapper.Core/Dapper.Core.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
 		<RootNamespace>Dapper</RootNamespace>
+		<GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">True</GeneratePackageOnBuild>
 	</PropertyGroup>
 
 	<ItemGroup>
