--- a/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
+++ b/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
@@ -1,23 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net48;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
 		<NoWarn>$(NoWarn);IDE0042;CS8002</NoWarn>
+		<SignAssembly Condition="'$(TargetFramework)'=='net48'">false</SignAssembly>
 	</PropertyGroup>
 	<ItemGroup>
 		<Compile Remove="Samples/**/*.input.cs" />
 		<Compile Remove="Samples/**/*.output.cs" />
+		<Compile Remove="Samples/**/*.output.netfx.cs" />
 		<None Include="Samples/**/*.input.cs" CopyToOutputDirectory="PreserveNewest" />
 		<None Include="Samples/**/*.output.cs" CopyToOutputDirectory="PreserveNewest" />
+		<None Include="Samples/**/*.output.netfx.cs" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.0.78" />
 		<PackageReference Include="Microsoft.Build" Version="16.9.0" />
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.9.0" />
-		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.1" />
+		<PackageReference Include="Oracle.ManagedDataAccess" Version="19.11.0" Condition="'$(TargetFramework)'=='net48'" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" Condition="'$(TargetFramework)'=='net48'"/>
+		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.1" Condition="'$(TargetFramework)'!='net48'" />
 		<PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
 		<PackageReference Include="System.Data.Common" Version="4.3.0" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
 			<PrivateAssets>all</PrivateAssets>
