embed the analyzers in the package; rename etc accordingly

--- a/test/UsageBenchmark/UsageBenchmark.csproj
+++ b/test/UsageBenchmark/UsageBenchmark.csproj
@@ -5,7 +5,7 @@
         <SignAssembly>False</SignAssembly>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Dapper.Core" Version="0.0.12" />
+        <PackageReference Include="Dapper.AOT" Version="0.0.14" />
         <PackageReference Include="Dapper" Version="2.0.78" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
