--- a/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
+++ b/test/Dapper.AOT.Test/Dapper.AOT.Test.csproj
@@ -17,7 +17,7 @@
         <PackageReference Include="Microsoft.Build" Version="16.9.0" />
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.9.0" />
         <PackageReference Include="Oracle.ManagedDataAccess" Version="19.11.0" Condition="'$(TargetFramework)'=='net48'" />
-        <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" Condition="'$(TargetFramework)'=='net48'"/>
+        <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" Condition="'$(TargetFramework)'=='net48'" />
         <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.1" Condition="'$(TargetFramework)'!='net48'" />
         <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
         <PackageReference Include="System.Data.Common" Version="4.3.0" />
@@ -30,7 +30,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.9.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-        <ProjectReference Include="..\..\src\Dapper.Core\Dapper.Core.csproj" />
-        <ProjectReference Include="..\..\src\Dapper.AOT\Dapper.AOT.csproj" />
+        <ProjectReference Include="../../src/Dapper.AOT.Analyzers/Dapper.AOT.Analyzers.csproj" />
+        <ProjectReference Include="../../src/Dapper.AOT/Dapper.AOT.csproj" />
     </ItemGroup>
 </Project>
