--- a/test/UsageBenchmark/UsageBenchmark.csproj
+++ b/test/UsageBenchmark/UsageBenchmark.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <SignAssembly>False</SignAssembly>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Dapper.AOT" Version="0.0.14" />
+        <ProjectReference Include="..\..\src\Dapper.AOT.Analyzers\Dapper.AOT.Analyzers.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+        <ProjectReference Include="..\..\src\Dapper.AOT\Dapper.AOT.csproj" />
+
         <PackageReference Include="Dapper" Version="2.0.78" />
         <PackageReference Include="Microsoft.Data.SqlClient" Version="2.1.2" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
