--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: dotnet/nbgv@master
+      with:
+        setAllVars: true
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -21,6 +24,12 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore Build.csproj
     - name: Build
-      run: dotnet build Build.csproj --no-restore
+      run: dotnet build Build.csproj --no-restore -c Release
     - name: Test
-      run: dotnet test Build.csproj --no-build --verbosity normal
+      run: dotnet test Build.csproj --no-build --verbosity normal -c Release
+    - name: Pack
+      run: dotnet pack Build.csproj --no-build --verbosity normal -c Release
+    - name: Push
+      run: dotnet nuget push src/Dapper.AOT/bin/Release/$NBGV_SemVer2.nupkg --source https://www.myget.org/F/dapper/api/v2/package --api-key ${MYGETAPIKEY}
+      env:
+        MYGETAPIKEY: ${{ secrets.MYGETAPIKEY }}
