--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Test
       run: dotnet test Build.csproj --no-build --verbosity normal -c Release -f net6.0
     - name: Pack
-      run: dotnet pack Build.csproj --no-build --verbosity normal -c Release
+      run: dotnet pack src/Dapper.AOT/Dapper.AOT.csproj --no-build --verbosity normal -c Release
     - name: Push
-      run: dotnet nuget push src/Dapper.AOT/bin/Release/${NBGV_SemVer2}.nupkg --source https://www.myget.org/F/dapper/api/v2/package --api-key ${MYGETAPIKEY}
+      run: dotnet nuget push src/Dapper.AOT/bin/Release/Dapper.AOT.${NBGV_SemVer2}.nupkg --source https://www.myget.org/F/dapper/api/v2/package --api-key ${MYGETAPIKEY}
       env:
         MYGETAPIKEY: ${{ secrets.MYGETAPIKEY }}
