--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,22 +1,26 @@
 <Project>
-	<PropertyGroup>
-		<SignAssembly>True</SignAssembly>
-		<DelaySign>False</DelaySign>
-		<Description>Build time (AOT) tools for Dapper</Description>
-		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)Dapper.AOT.snk</AssemblyOriginatorKeyFile>
-		<LangVersion>9</LangVersion>
-		<Nullable>enable</Nullable>
-		<RootNamespace>Dapper</RootNamespace>
-		<Version>0.0.15</Version>
-		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-		<PackageIcon>Dapper.png</PackageIcon>
-	</PropertyGroup>
-	<ItemGroup>
-		<None Include="../../Dapper.png">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
-        <PackageReference Include="Nerdbank.GitVersioning" Version="3.3.37" PrivateAssets="all" />
+    <PropertyGroup>
+        <SignAssembly>True</SignAssembly>
+        <DelaySign>False</DelaySign>
+        <Description>Build time (AOT) tools for Dapper</Description>
+        <AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)Dapper.AOT.snk</AssemblyOriginatorKeyFile>
+        <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
+        <RootNamespace>Dapper</RootNamespace>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <PackageIcon>Dapper.png</PackageIcon>
+        <Authors>Marc Gravell</Authors>
+        <Copyright>Marc Gravell, 2021 onwards</Copyright>
+        <PackageProjectUrl>https://github.com/DapperLib/DapperAOT/</PackageProjectUrl>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/DapperLib/DapperAOT/</RepositoryUrl>
+    </PropertyGroup>
+    <ItemGroup>
+        <None Include="$(MSBuildThisFileDirectory)Dapper.png" Visible="false">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.194" PrivateAssets="all" />
         <PackageReference Include="DotNet.ReproducibleBuilds" Version="0.1.34" PrivateAssets="All" Pack="false" />
-	</ItemGroup>
+    </ItemGroup>
 </Project>
